# fr-pipewire-registry

./: Cargo.toml  build.rs
proto/: application.proto  device.proto  link.proto  node.proto  pipewire.proto  port.proto
src/: client.rs  grpc_services.rs  grpc_services_loop.rs  logging.rs  pipewire_event_consumer.rs  pipewire_factory.rs  pipewire_loop.rs  pipewire_registry.rs  server.rs
src/grpc_services/: application_service.rs  device_service.rs  node_service.rs  port_service.rs
src/pipewire_registry/: entities.rs  registry_application.rs  registry_device.rs  registry_node.rs  registry_port.rs
