[package]
name = "fr-pipewire-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fr-pipewire-registry-server"
path = "src/server.rs"

[[bin]]
name = "fr-pwreg-cli"
path = "src/client.rs"

[dependencies]
tonic = "0.12.1"
prost = "0.13"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread", "signal", "sync"] }
pipewire = "0.8.0"
anyhow = "1.0.86"
toml = "0.8.19"
serde = { version = "1.0.204", features = ["derive"] }
itertools = "0.13.0"
home = "0.5.9"
libspa = "0.8.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rlg = "0.0.4"
chrono = "0.4.38"
features = "0.10.0"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.12"
