[package]
name = "fr-pipewire-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fr-pipewire-registry"
path = "src/server.rs"

[[bin]]
name = "fr-pipewire-registry-cli"
path = "src/client.rs"

[dependencies]
tonic = "0.12.1"
prost = "0.13"
tokio = { version = "1.0", features = [
  "full",
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
] }
pipewire = "0.8.0"
anyhow = "1.0.86"
toml = "0.8.19"
serde = { version = "1.0.204", features = ["derive"] }
itertools = "0.13.0"
home = "0.5.9"
libspa = "0.8.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rlg = "0.0.4"
chrono = "0.4.38"
features = "0.10.0"
futures = "0.3.30"
clap = { version = "4.5.13", features = ["derive"] }
fr-pmx-config-lib = { path = "../fr-pmx-config-lib" }
fr-logging = { path = "../fr-logging" }

[build-dependencies]
tonic-build = "0.12"
